[전처리] API 제거

--- a/쓰레기통위경도매칭.ipynb
+++ b/쓰레기통위경도매칭.ipynb
@@ -495,7 +495,7 @@
    "source": [
     "# address = '서울특별시 강남구 압구정로14길 6'\n",
     "# url = \"https://dapi.kakao.com/v2/local/search/address.json?query={}\".format(address)\n",
-    "# headers = {\"Authorization\": 'KakaoAK 9b47700a217b794a8878d97b26b723be'}\n",
+    "# headers = {\"Authorization\": 'KakaoAK ###write your key###'}\n",
     "# results = requests.get(url, headers=headers).json()['documents']\n",
     "# results"
    ]
@@ -508,7 +508,7 @@
    "source": [
     "# address = '서울특별시 강남구 삼성로92길 28'\n",
     "# url = \"https://dapi.kakao.com/v2/local/search/address.json?query={}\".format(address)\n",
-    "# headers = {\"Authorization\": 'KakaoAK 9b47700a217b794a8878d97b26b723be'}\n",
+    "# headers = {\"Authorization\": 'KakaoAK ###write your key###'}\n",
     "# results = requests.get(url, headers=headers).json()['documents']\n",
     "# results"
    ]
@@ -523,7 +523,7 @@
     "def GetLatLng(address):\n",
     "    \n",
     "    url = \"https://dapi.kakao.com/v2/local/search/address.json?query={}\".format(address) #요청할 url 주소\n",
-    "    headers = {\"Authorization\": 'KakaoAK 9b47700a217b794a8878d97b26b723be'} #REST API 키(유효한 키)\n",
+    "    headers = {\"Authorization\": 'KakaoAK ###write your key###'} #REST API 키(유효한 키)\n",
     "    results = requests.get(url,\n",
     "                          headers=headers).json()['documents'] #카카오 API 요청\n",
     "    \n",
@@ -2168,7 +2168,7 @@
     "# 육도라는 상호명이 토정로 261임\n",
     "address = '서울특별시 마포구 토정로25길 261'\n",
     "url = \"https://dapi.kakao.com/v2/local/search/address.json?query={}\".format(address)\n",
-    "headers = {\"Authorization\": 'KakaoAK 9b47700a217b794a8878d97b26b723be'}\n",
+    "headers = {\"Authorization\": 'KakaoAK ###write your key###'}\n",
     "results = requests.get(url, headers=headers).json()['documents']\n",
     "results"
    ]
@@ -2195,7 +2195,7 @@
     "# 설치 세부 위치인 띠녹지 앞은 '토정로 35길 12' - 하지만 해당 주소로는 위경도가 안나옴\n",
     "address = '서울특별시 마포구 토정로35길 12'\n",
     "url = \"https://dapi.kakao.com/v2/local/search/address.json?query={}\".format(address)\n",
-    "headers = {\"Authorization\": 'KakaoAK 9b47700a217b794a8878d97b26b723be'}\n",
+    "headers = {\"Authorization\": 'KakaoAK ###write your key###'}\n",
     "results = requests.get(url, headers=headers).json()['documents']\n",
     "results"
    ]
@@ -5362,7 +5362,7 @@
    "source": [
     "address = '자하문로1길 12'\n",
     "url = \"https://dapi.kakao.com/v2/local/search/address.json?query={}\".format(address)\n",
-    "headers = {\"Authorization\": 'KakaoAK 9b47700a217b794a8878d97b26b723be'}\n",
+    "headers = {\"Authorization\": 'KakaoAK ###write your key###'}\n",
     "results = requests.get(url, headers=headers).json()['documents']\n",
     "results"
    ]
