--- a/영등포구_상관분석.ipynb
+++ b/영등포구_상관분석.ipynb
@@ -329,7 +329,7 @@
     "# lng = '126.898124'\n",
     "# lat = '37.526561'\n",
     "# url = \"https://dapi.kakao.com/v2/local/geo/coord2address.json?x=\"+lng+\"&y=\"+lat\n",
-    "# headers = {\"Authorization\": 'KakaoAK 9b47700a217b794a8878d97b26b723be'}\n",
+    "# headers = {\"Authorization\": 'KakaoAK ###write your key###'}\n",
     "# results = requests.get(url, headers=headers).json()['documents']\n",
     "\n",
     "# address = results[0]\n",
@@ -348,7 +348,7 @@
     "# def GetAddress(lng, lat):\n",
     "    \n",
     "#     url = \"https://dapi.kakao.com/v2/local/geo/coord2address.json?x=\"+lng+\"&y=\"+lat\n",
-    "#     headers = {\"Authorization\": 'KakaoAK 9b47700a217b794a8878d97b26b723be'}\n",
+    "#     headers = {\"Authorization\": 'KakaoAK ###write your key###'}\n",
     "#     results = requests.get(url, headers=headers).json()['documents']\n",
     "    \n",
     "#     address = results[0]\n",
@@ -368,7 +368,7 @@
     "def GetAddress(lng, lat):\n",
     "    \n",
     "    url = \"https://dapi.kakao.com/v2/local/geo/coord2address.json?x=\"+lng+\"&y=\"+lat\n",
-    "    headers = {\"Authorization\": 'KakaoAK 9b47700a217b794a8878d97b26b723be'}\n",
+    "    headers = {\"Authorization\": 'KakaoAK ###write your key###'}\n",
     "    results = requests.get(url, headers=headers).json()['documents']\n",
     "    \n",
     "    address = results[0]\n",
@@ -397,7 +397,7 @@
     "# lng = '126.8937'\n",
     "# lat = '37.5398'\n",
     "# url = \"https://dapi.kakao.com/v2/local/geo/coord2address.json?x=\"+lng+\"&y=\"+lat\n",
-    "# headers = {\"Authorization\": 'KakaoAK 9b47700a217b794a8878d97b26b723be'}\n",
+    "# headers = {\"Authorization\": 'KakaoAK ###write your key###'}\n",
     "# results = requests.get(url, headers=headers).json()['documents']\n",
     "\n",
     "# address = results[0]\n",
@@ -426,7 +426,7 @@
     "# lng = '126.9042'\n",
     "# lat = '32.5273'\n",
     "# url = \"https://dapi.kakao.com/v2/local/geo/coord2address.json?x=\"+lng+\"&y=\"+lat\n",
-    "# headers = {\"Authorization\": 'KakaoAK 9b47700a217b794a8878d97b26b723be'}\n",
+    "# headers = {\"Authorization\": 'KakaoAK ###write your key###'}\n",
     "# results = requests.get(url, headers=headers).json()['documents']\n",
     "\n",
     "# results\n",
@@ -710,7 +710,7 @@
     "def GetDoroAddress(jibeon):\n",
     "    \n",
     "    url = \"https://dapi.kakao.com/v2/local/search/address.json?query={}\".format(jibeon)\n",
-    "    headers = {\"Authorization\": 'KakaoAK 9b47700a217b794a8878d97b26b723be'}\n",
+    "    headers = {\"Authorization\": 'KakaoAK ###write your key###'}\n",
     "    results = requests.get(url, headers=headers).json()['documents']\n",
     "    \n",
     "    address = results[0]\n",
@@ -738,7 +738,7 @@
    "source": [
     "jibeon = yeongdeung_c['주소'][0]\n",
     "url = \"https://dapi.kakao.com/v2/local/search/address.json?query={}\".format(jibeon)\n",
-    "headers = {\"Authorization\": 'KakaoAK 9b47700a217b794a8878d97b26b723be'}\n",
+    "headers = {\"Authorization\": 'KakaoAK ###write your key###'}\n",
     "results = requests.get(url, headers=headers).json()['documents']\n",
     "\n",
     "address = results[0]\n",
@@ -802,7 +802,7 @@
    "source": [
     "jibeon = yeongdeung_c['주소'][5]\n",
     "url = \"https://dapi.kakao.com/v2/local/search/address.json?query={}\".format(jibeon)\n",
-    "headers = {\"Authorization\": 'KakaoAK 9b47700a217b794a8878d97b26b723be'}\n",
+    "headers = {\"Authorization\": 'KakaoAK ###write your key###'}\n",
     "results = requests.get(url, headers=headers).json()['documents']\n",
     "\n",
     "address = results[0]\n",
@@ -867,7 +867,7 @@
    "source": [
     "jibeon = yeongdeung_c['주소'][28]\n",
     "url = \"https://dapi.kakao.com/v2/local/search/address.json?query={}\".format(jibeon)\n",
-    "headers = {\"Authorization\": 'KakaoAK 9b47700a217b794a8878d97b26b723be'}\n",
+    "headers = {\"Authorization\": 'KakaoAK ###write your key###'}\n",
     "results = requests.get(url, headers=headers).json()['documents']\n",
     "\n",
     "address = results[0]\n",
