--- a/투기지역_흡연구역_연관성.ipynb
+++ b/투기지역_흡연구역_연관성.ipynb
@@ -750,10 +750,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# NaN값 위경도 찾아서 직접 기입(1행 위경도와 동일)\n",
+        "# NaN값 위경도 찾아서 직접 기입\n",
         "\n",
-        "df_t['위도'][2] = df_t['위도'][1]\n",
-        "df_t['경도'][2] = df_t['경도'][1]\n",
+        "df_t['위도'][2] = 37.541714794805\n",
+        "df_t['경도'][2] = 126.971991337622\n",
         "df_t"
       ],
       "metadata": {
